# etas

./: .flake8  .gitignore  LICENSE  README.md  california_shape.npy  inversion.py  invert_etas.py  invert_etas_mc_var.py  magnitudes.npy  mc_b_est.py  pyproject.toml  requirements.txt  setup.cfg  simulate_catalog.py  simulate_catalog_continuation.py  simulation.py  synthetic_catalog_mc_var.csv
config/: ch_forecast_config.json  ch_invert_etas_config.json  ch_simulate_catalog_continuation_config.json  invert_etas_config.json  invert_etas_mc_var_config.json  invert_etas_mc_var_config_europe_new.json  invert_etas_with_constraints.json  simulate_catalog_config.json  simulate_catalog_continuation_config.json  visualisation_config.json
etas/: __init__.py  download.py  entrypoint.py  evaluation.py  inversion.py  mc_b_est.py  plots.py  simulation.py
etas/commands/: inv.py  mc.py  run.py  sim.py
etas/oef/: __init__.py  entrypoint.py
etas/oef/data/: SUIhaz2015_rates.csv  ch_shape_buffer.npy  europe_parameters.json  europe_shape_r.npy
input_data/: catalog.xml  ch_catalog.csv  ch_rect.npy  europe_catalog.csv  example_catalog.csv
run_entrypoints/: ch_shape.npy  europe_shape.npy  forecast.csv  run_entrypoint_europe.py  run_entrypoint_gen.py  run_entrypoint_sui.py
runnable_code/: ch_forecast.py  estimate_mc.py  evaluate_etas.py  invert_etas.py  invert_etas_mc_var.py  predict_etas.py  read_model.py  reload_example.py  run_entrypoint.py  simulate_catalog.py  simulate_catalog_continuation.py  visualise_fit.py
utils/: inversion.py  simulation.py
