[metadata]
name = etas
author = Leila Mizrahi
author_email = leila.mizrahi@sed.ethz.ch
version = 3.0
description = Epidemic-Type Aftershock Sequence
long_description = file: README.md, LICENSE
license = MIT License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    geopandas
    numpy
    pandas
    pynverse
    scipy
    Shapely

[options.packages.find]
include=etas*