[metadata]
name = etas
author = Leila Mizrahi, Nicolas Schmid
author_email = leila.mizrahi@sed.ethz.ch, nicolas.schmid@sed.ethz.ch
version = 3.0
description = Epidemic-Type Aftershock Sequence
long_description = file: README.md, LICENSE
license = MIT License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    geopandas
    numpy
    pandas
    pynverse
    scipy
    Shapely

[options.packages.find]
include=etas*

[flake8]
select = E,F,W
max_line_length = 79
ignore = E402, W503
exclude =
  .git,
  .tox,
  .eggs,
  .config,
  *.egg-info,
  __pycache__,
  .pytest_cache,
  env,
